This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: Objects/genobject.c: Missing NULL check in compute_cr_origin()
Type: behavior Stage: resolved
Components: Interpreter Core Versions: Python 3.8, Python 3.7
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: benjamin.peterson, berker.peksag, izbyshev, miss-islington, njs, serhiy.storchaka
Priority: normal Keywords: patch

Created on 2018-08-24 23:05 by izbyshev, last changed 2022-04-11 14:59 by admin. This issue is now closed.

Pull Requests
URL Status Linked Edit
PR 8911 merged izbyshev, 2018-08-24 23:07
PR 8918 merged miss-islington, 2018-08-25 07:15
Messages (3)
msg324022 - (view) Author: Alexey Izbyshev (izbyshev) * (Python triager) Date: 2018-08-24 23:05
The return value of PyTuple_New() is not checked for NULL at https://github.com/python/cpython/blob/ef8861c112ed1dac9351958c121bc24ca4ecdb08/Objects/genobject.c#L1130 and then dereferenced.
msg324044 - (view) Author: Benjamin Peterson (benjamin.peterson) * (Python committer) Date: 2018-08-25 07:15
New changeset 8fdd331bbf7e60dd81c02c7077f44c7939e2a05d by Benjamin Peterson (Alexey Izbyshev) in branch 'master':
closes bpo-34493: Objects/genobject.c: Add missing NULL check to compute_cr_origin() (GH-8911)
https://github.com/python/cpython/commit/8fdd331bbf7e60dd81c02c7077f44c7939e2a05d
msg324046 - (view) Author: miss-islington (miss-islington) Date: 2018-08-25 07:36
New changeset 46af206ea4e9d67375559f8c584a996f70b7b7e5 by Miss Islington (bot) in branch '3.7':
closes bpo-34493: Objects/genobject.c: Add missing NULL check to compute_cr_origin() (GH-8911)
https://github.com/python/cpython/commit/46af206ea4e9d67375559f8c584a996f70b7b7e5
History
Date User Action Args
2022-04-11 14:59:05adminsetgithub: 78674
2018-08-25 07:36:38miss-islingtonsetnosy: + miss-islington
messages: + msg324046
2018-08-25 07:15:45miss-islingtonsetpull_requests: + pull_request8391
2018-08-25 07:15:28benjamin.petersonsetstatus: open -> closed

nosy: + benjamin.peterson
messages: + msg324044

resolution: fixed
stage: patch review -> resolved
2018-08-24 23:07:59izbyshevsetkeywords: + patch
stage: patch review
pull_requests: + pull_request8383
2018-08-24 23:05:49izbyshevcreate