closes bpo-34493: Objects/genobject.c: Add missing NULL check to compute_cr_origin() (GH-8911)

(cherry picked from commit 8fdd331bbf7e60dd81c02c7077f44c7939e2a05d)

Co-authored-by: Alexey Izbyshev <izbyshev@ispras.ru>